Do not use URL constructor
Address deprecation warnings by going through URI.

Change-Id: I21c6a570f193b3fd40220052aa0444023e16b88a
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>
(cherry picked from commit 9fc44c232a3d9f7969fc99a0daaca039bb30c5b0)